@@ -2,6 +2,8 @@
 
 A fabric utility mod
 
+VM Options `--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/sun.reflect.annotation=ALL-UNNAMED`
+
 ## Dependency
 
 [fabric-api](https://www.curseforge.com/minecraft/mc-mods/fabric-api)
